--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
       </nav><!-- .navbar -->
 
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/muhammad-khuram-279181249?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
       </div>
 
     </div>
@@ -353,7 +350,7 @@ applications using React.js.
           <div class="icon-box">
             <div class="icon"><i class="bi bi-browser-chrome"></i></div>
             <h4><a href="">Web Development</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <p>Web development is my passion, where I craft digital experiences that come to life on the internet.</p>
 
           </div>
         </div>
@@ -362,7 +359,7 @@ applications using React.js.
           <div class="icon-box">
             <div class="icon"><i class="bi bi-google-play"></i></div>
             <h4><a href="">React Apps</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <p>As a skilled React developer, I leverage the power of this dynamic library to create visually stunning,<br> high-performance web applications</p>
 
           </div>
         </div>
@@ -371,7 +368,7 @@ applications using React.js.
           <div class="icon-box">
             <div class="icon"><i class="bi bi-shop"></i></div>
             <h4><a href="">Ecomerence</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <p>In the world of e-commerce, I architect and optimize online shopping experiences that seamlessly connect <br> customers with products</p>
 
           </div>
         </div>
@@ -396,25 +393,13 @@ applications using React.js.
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-web">Web</li>
-            <li data-filter=".filter-card">Card</li>
           </ul>
         </div>
       </div>
 
       <div class="row portfolio-container">
 
-        <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-          <div class="portfolio-wrap">
-            <img src="assets/img/project1.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Netlify</h4>
-              <p>Web</p>
-              <div class="portfolio-links">
-                <a href="https://www.netlify.com/" ><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+      
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
@@ -512,11 +497,8 @@ applications using React.js.
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+   
+              <a href="https://www.linkedin.com/in/muhammad-khuram-279181249?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
